# slack-coder

./: .env.example  .gitmodules  Cargo.toml  Makefile  README.md  README_zh.md  _typos.toml  deny.toml
docs/: CONCURRENCY_ANALYSIS.md  DEBUGGING.md  QUICK_START.md  SLACK_SETUP.md  TROUBLESHOOTING_COMMANDS.md
docs/learnings/: building-slack-bot-with-socket-mode.md  system-prompt-restructure.md
examples/: agent.rs
prompts/: main-agent-system-prompt.md  repo-agent-workflow.md
specs/: 0001-slack-bot-spec.md  0002-slack-bot-design.md  0003-system-prompt.md  0004-initial-plan.md  0005-slack-new-session-command.md  0006-enhanced-logging.md  0006-usage-metrics-and-notifications.md  0007-implementation-status.md  0007-improved-structured-logging.md  0008-metadata-enriched-logging.md  0009-optimized-notifications.md  0010-fix-main-agent-progress.md  instructions.md
src/: error.rs  lib.rs  logging.rs  main.rs  session.rs
src/agent/: hooks.rs  main_agent.rs  manager.rs  mod.rs  repo_agent.rs  types.rs
src/config/: mod.rs  settings.rs
src/metadata/: cache.rs  mod.rs  types.rs
src/slack/: client.rs  commands.rs  events.rs  forms.rs  markdown.rs  messages.rs  metrics.rs  mod.rs  progress.rs  types.rs
src/storage/: workspace.rs
